r1281 + setConfigVar() didn't work ever, fixed + new extra option to setConfigVar() to avoid unnecessary call to die() + getConfigVar() was a little broken also + updateUI(): use stock functions, clean up arg list + renderUIConfig()/renderUIConfigEditForm: don't show the user too much data + getObjectInfo(): print more detailed error message + getObjectAddresses(): fix two queries trying to use the same DB link + brand new dragons on the reports page

--- a/pi.css
+++ b/pi.css
@@ -53,6 +53,11 @@ table.molecule {
 	text-align: left;
 }
 
+.dragon {
+	background-color: #000033;
+	text-align: left;
+}
+
 .tdright {
 	text-align: right;
 }
